--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
+@import "~react-image-gallery/styles/css/image-gallery.css";
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400&display=swap');
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  user-select: none;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.dropzone {
+  text-align: center;
+  padding: 1.5rem;
+  border: 3px dashed #eeeeee;
+  background-color: #fafafa;
+  color: #bdbdbd;
+
+  margin-bottom: 1.5rem;
+  margin-top: 1.5rem;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+/* body{
+  scroll-behavior: smooth;
+  height: 100vh;
+  width: 100vw;
+} */
+
+.customOverlay{
+  animation-fill-mode: forwards !important;
+
+}
+.customModal {
+  position: relative;
+  overflow: visible;
+  animation-fill-mode: forwards  !important;
+  box-sizing: border-box;
+  width: 80%;
+  height: fit-content;
+  min-height: 60%;
+  border-radius: 20px;
+}
+
