added download button

--- a/src/components/Annotation/keyvalue.scss
+++ b/src/components/Annotation/keyvalue.scss
@@ -8,4 +8,11 @@
   .MuiFormControl-root {
     width: 80%;
   }
+
+  .button-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
